2013-07-26  Pedro Alves  <palves@redhat.com>

	* gdb.base/interrupt-noterm.c, gdb.base/interrupt-noterm.exp: New
	files.

2013-07-25  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.mi/mi-reg-undefined.exp: New file.
	* gdb.mi/mi-reg-undefined.c: Likewise.
	* gdb.mi/mi-reg-undefined.S: Likewise.

2013-07-25  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.base/printcmds.exp (test_print_int_arrays): Add tests for x,
	z, o, and t output formats.
	* gdb.base/display.exp: Use 'k' as an undefined format now that
	'z' is defined.

2013-07-24  Doug Evans  <dje@google.com>

	* boards/native-stdio-gdbserver.exp (${board}_build_remote_cmd): Pass
	"--" to switch.

2013-07-24  Yao Qi  <yao@codesourcery.com>

	* gdb.mi/mi-var-cmd.exp: If host is remote, use ${testfile} on
	host.
	* gdb.mi/mi-basics.exp (test_exec_and_symbol_mi_operatons):
	Likewise.  If host is remote, copy ${binfile} to host.

2013-07-23  Yao Qi  <yao@codesourcery.com>

	* gdb.mi/mi-var-cmd.exp: Adjust pattern to match current error
	message.

2013-07-19  Omair Javaid  <Omair.Javaid@linaro.org>

	* gdb.base/disp-step-syscall.exp: Add svc and swi syscall
	instructions and enable disp-step-syscall for arm targets.

2013-07-19  Omair Javaid  <Omair.Javaid@linaro.org>

	* gdb.dwarf2/fission-reread.S: Replace @ sign with % sign to remove
	assembler errors on arm.
	* gdb.dwarf2/mac-fileno.S: Likewise.
	* gdb.dwarf2/member-ptr-forwardref.S: Likewise.
	* gdb.dwarf2/pr13961.S: Likewise.

2013-07-19  Hui Zhu  <hui@codesourcery.com>

	PR gdb/15692
	* gdb.mi/mi-dprintf.exp: Add double quotes test.

2013-07-19  Yao Qi  <yao@codesourcery.com>

	* gdb.trace/read-memory.exp (test_from_remote): Update test.
	(teset_from_exec): Likewise.

2013-07-19  Yao Qi  <yao@codesourcery.com>

	* gdb.trace/read-memory.c: New.
	* gdb.trace/read-memory.exp: New.

2013-07-19  Yao Qi  <yao@codesourcery.com>

	* lib/gdb.exp (gdb_compile_shlib): Pass the tail name of
	$dest to link options if host is remote.  Move the